language/tests/error/InvalidAssignmentInWhileCond.hashem
bebin double(x) {
  bede 2 * x;
}

bebin main() {
  ta (double(2) = 4) bood {
    42;
  }
}